auth middleware checkpoint (seems to be working????)
